# infra

./: .gitignore  Cargo.toml  README  README.md  aws-static-provisioning-avalanche.md  go.work
.github/: dependabot.yml
.github/workflows/: aws-go-cmd-release.yml  aws-rust-test.yml  goreleaser-aws-volume-provisioner.yml  test-and-release.yml
aws/: README.md
aws/go/: README.md  aws.go  go.mod  sts.go  sts_test.go  updatedep.sh
aws/go/cfn/: cfn.go  cfn_test.go
aws/go/cfn/tests/: ec2_instance_role.yaml
aws/go/cmd/: .goreleaser.yaml
aws/go/cmd/aws-eni-provisioner/: main.go
aws/go/cmd/aws-instance-route-provisioner/: main.go
aws/go/cmd/aws-ip-provisioner/: main.go
aws/go/cmd/aws-volume-provisioner/: .goreleaser.yaml  goreleaser.yml  main.go
aws/go/cmd/version/: command.go
aws/go/ec2/: ami.go  asg.go  asg_test.go  ebs.go  ebs_test.go  ec2.go  eips.go  enis.go  enis_test.go  key.go  key_test.go  options.go  routes.go  routes_test.go  sgs.go  sgs_test.go  tags.go  tags_test.go  vpcs.go  vpcs_test.go
aws/go/ec2/metadata/: metadata.go  metadata_test.go
aws/go/ec2/ssh/: ssh.go  ssh_test.go
aws/go/eks/: eks.go
aws/go/examples/kms/: main.go
aws/go/examples/s3/: main.go
aws/go/examples/sts/: main.go
aws/go/kms/: kms.go  kms_test.go
aws/go/kms/envelope/: envelope.go  envelope_test.go
aws/go/kms/eth/: eth.go
aws/go/pkg/crypto/: crypto.go
aws/go/pkg/ctxutil/: ctx_test.go
aws/go/pkg/fileutil/: file.go
aws/go/pkg/logutil/: logutil.go
aws/go/pkg/randutil/: rand_test.go
aws/go/s3/: presigned.go  presigned_test.go  s3.go  s3_test.go
aws/go/s3/cloudflare/: cloudflare.go  cloudflare_test.go
aws/go/s3/r2/: cloudflare.go  cloudflare_test.go
aws/go/s3/r2/examples/list-buckets/: main.go
aws/go/s3/r2/examples/pre-signed-urls-for-get/: main.go
aws/go/secrets/: secrets.go  secrets_test.go
aws/go/ssm/: ssm.go  ssm_test.go
aws/go/sts/: sts.go  sts_test.go
aws/rust/: Cargo.toml
aws/rust/examples/: cloudformation_vpc.rs  cloudwatch.rs  ec2_ebs_create_volume.rs  ec2_ebs_describe_volumes.rs  sqs.rs
aws/rust/src/: errors.rs  lib.rs
aws/rust/src/acm/: mod.rs
aws/rust/src/acmpca/: mod.rs
aws/rust/src/autoscaling/: mod.rs
aws/rust/src/cloudformation/: mod.rs
aws/rust/src/cloudwatch/: mod.rs
aws/rust/src/ec2/: mod.rs
aws/rust/src/kms/: envelope.rs  mod.rs
aws/rust/src/s3/: mod.rs
aws/rust/src/sqs/: mod.rs
aws/rust/src/ssm/: mod.rs
aws/rust/src/sts/: mod.rs
examples/: acmpca.rs  cloudformation_ec2_instance_role.rs  cloudformation_vpc.rs  cloudwatch.rs  ec2_create_volume.rs  ec2_disk.rs  ec2_ebs_create_volume.rs  ec2_ebs_describe_volumes.rs  ec2_key_pair.rs  ec2_key_pair_import.rs  ec2_key_pair_import_openssl.rs  ec2_plugins.rs  kms.rs  s3.rs  s3_encrypt.rs  sqs.rs  sts.rs
examples/templates/: ec2_instance_role.yaml
go/: go.mod  updatedep.sh
go/fileutil/: file.go  file_test.go
go/httputil/: http.go  http_test.go  httputil.go
go/logutil/: log.go  log_test.go
go/prompt/: prompt.go
go/randutil/: rand.go  rand_test.go
go/runtime/: fds_linux.go  fds_other.go
k8s/go/: go.mod  k8s.go  updatedep.sh
k8s/go/csrs/: csrs.go  csrs_test.go  options.go
k8s/go/nodes/: nodes.go  nodes_test.go  options.go
linux/go/: .gitignore  go.mod  updatedep.sh
linux/go/disk/: disk.go
rust/: Cargo.toml  README.md
rust/examples/: cloudformation_vpc.rs  ec2_disk.rs  ec2_ebs_create_volume.rs  ec2_plugins.rs  kms.rs  s3_encrypt.rs  sqs.rs  ssm.rs
rust/examples/templates/: ec2_instance_role.yaml
rust/src/: lib.rs
rust/src/autoscaling/: mod.rs
rust/src/kms/: envelope.rs
scripts/: examples.sh
src/: cloudformation.rs  cloudwatch.rs  ec2.rs  envelope.rs  errors.rs  lib.rs  s3.rs  ssm.rs  sts.rs
src/acm/: mod.rs
src/acmpca/: mod.rs
src/acmpca/cert/: x509.rs
src/autoscaling/: mod.rs
src/cloudformation/: mod.rs
src/cloudwatch/: mod.rs
src/ec2/: disk.rs  metadata.rs  mod.rs
src/ec2/plugins/: mod.rs  scripts.rs
src/ec2/ssl/: ssh.rs
src/kms/: envelope.rs  mod.rs
src/s3/: mod.rs
src/sqs/: mod.rs
src/ssm/: mod.rs
src/sts/: mod.rs
src/utils/: compress.rs  http.rs  mod.rs  random.rs  rfc3339.rs  system_id.rs  time.rs
