[package]
name = "aws-manager"

# must be consistent with the "aws-sdk*" version
# e.g., "0.0.x" in "aws-manager" maps to "0.x.y" in "aws-sdk*"
version = "0.30.4" # https://crates.io/crates/aws-manager/versions

edition = "2021"
rust-version = "1.73"
publish = true
description = "AWS SDK manager"
homepage = "https://github.com/gyuho/infra/tree/main/aws/rust"
license = "Apache-2.0"

[dependencies]
aws-config = "0.56.1" # https://github.com/awslabs/aws-sdk-rust/releases
aws-smithy-client = "0.57.1"
aws-smithy-runtime-api = "0.56.1"
aws-smithy-types = "0.56.1"
aws-types = "0.56.1" # https://crates.io/crates/aws-types/versions
log = "0.4.20"
thiserror = "1.0.50" # https://github.com/dtolnay/thiserror/releases
tokio = { version = "1.33.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

human-readable = { version = "0.0.1", optional = true }
random-manager = { version = "0.0.5", optional = true } # https://crates.io/crates/random-manager/versions
serde = { version = "1.0.190", features = ["derive"], optional = true } # https://github.com/serde-rs/serde/releases

aws-sdk-acm = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-acm/versions
aws-sdk-acmpca = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-acmpca/versions
aws-sdk-autoscaling = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-autoscaling/versions
aws-sdk-cloudformation = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-cloudformation/versions
aws-sdk-sqs = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-sqs/versions
aws-sdk-ssm = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-ssm/versions
aws-sdk-sts = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-sts/versions

# [OPTIONAL] for "s3"
aws-sdk-s3 = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-s3/versions
tokio-stream = { version = "0.1.14", optional = true } # https://github.com/tokio-rs/tokio/tree/master/tokio-stream

# [OPTIONAL] for "cloudwatch"
aws-sdk-cloudwatch = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-cloudwatch/versions
aws-sdk-cloudwatchlogs = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-cloudwatchlogs/versions
serde_json = { version = "1.0.107", optional = true } # https://github.com/serde-rs/json/releases

# [OPTIONAL] for "ec2"
aws-sdk-ec2 = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-ec2/versions
chrono = { version = "0.4.31", optional = true } # https://github.com/chronotope/chrono/releases
command-manager = { version = "0.0.3", optional = true }
reqwest = { version = "0.11.22", optional = true }
rfc-manager = { version = "0.0.1", optional = true }
serde_yaml = { version = "0.9.27", optional = true } # https://github.com/dtolnay/serde-yaml/releases

# [OPTIONAL] for "kms"
aws-sdk-kms = { version = "0.34.0", optional = true } # https://crates.io/crates/aws-sdk-kms/versions
byteorder = { version = "1.5.0", optional = true } # https://github.com/briansmith/ring
compress-manager = { version = "0.0.10", optional = true } # https://crates.io/crates/compress-manager/versions
ring = { version = "0.17.5", optional = true } # https://github.com/briansmith/ring

[dev-dependencies]
cert-manager = "0.0.11"
cmp-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
rcgen = "0.11.3"
rust-embed = "8.0.0" # https://github.com/pyrossh/rust-embed
ssh-scp-manager = "0.0.4"
tempfile = "3.8.1"
tokio-test = "0.4.3"

[features]
default = [
    # "acm",
    # "acmpca",
    # "autoscaling",
    # "cloudformation",
    # "cloudwatch",
    "ec2",
    # "kms",
    "s3",
    # "sqs",
    # "ssm",
    # "sts",
]

acm = [
    "aws-sdk-acm",
]
acmpca = [
    "aws-sdk-acmpca",
]
autoscaling = [
    "aws-sdk-autoscaling",
]
cloudformation = [
    "aws-sdk-cloudformation",
]
cloudwatch = [
    "aws-sdk-cloudwatch",
    "aws-sdk-cloudwatchlogs",
    "random-manager",
    "serde",
    "serde_json",
]
ec2 = [
    "aws-sdk-ec2",
    "chrono",
    "command-manager",
    "random-manager",
    "reqwest",
    "rfc-manager",
    "serde",
    "serde_json",
    "serde_yaml",
]
kms = [
    "aws-sdk-kms",
    "byteorder",
    "compress-manager",
    "human-readable",
    "random-manager",
    "ring",
]
s3 = [
    "kms",
    "aws-sdk-s3",
    "human-readable",
    "random-manager",
    "tokio-stream",
]
sqs = [
    "aws-sdk-sqs",
]
ssm = [
    "aws-sdk-ssm",
]
sts = [
    "aws-sdk-sts",
    "serde",
]

[[example]]
name = "acmpca"
required-features = ["acm", "acmpca", "random-manager", "rcgen"]

[[example]]
name = "cloudformation_ec2_instance_role"
required-features = ["cloudformation"]

[[example]]
name = "cloudformation_vpc"
required-features = ["cloudformation", "ec2"]

[[example]]
name = "cloudwatch"
required-features = ["cloudwatch"]

[[example]]
name = "ec2_disk"
required-features = ["ec2"]

[[example]]
name = "ec2_ebs_create_volume"
required-features = ["ec2"]

[[example]]
name = "ec2_ebs_describe_volumes"
required-features = ["ec2"]

[[example]]
name = "ec2_key_pair"
required-features = ["ec2"]

[[example]]
name = "ec2_key_pair_import"
required-features = ["ec2"]

[[example]]
name = "ec2_plugins"
required-features = ["ec2"]

[[example]]
name = "kms"
required-features = ["kms", "sts"]

[[example]]
name = "s3_encrypt"
required-features = ["s3"]

[[example]]
name = "s3"
required-features = ["s3"]

[[example]]
name = "sqs"
required-features = ["sqs", "random-manager"]

[[example]]
name = "ssm"
required-features = ["ssm"]

[[example]]
name = "sts"
required-features = ["sts"]

[package.metadata.cargo-udeps.ignore]
development = [
    "cert-manager",
    "cmp-manager",
    "env_logger",
    "id-manager",
    "rcgen",
    "rust-embed",
    "tempfile",
    "tokio-test",
]
normal = []
